# api_todo

./: .pre-commit-config.yaml  Procfile  README.md  manage.py  message  pyproject.toml
api_todo/: asgi.py  db.sqlite3  urls.py  wsgi.py
api_todo/settings/: base.py  production.py  test.py
api_todo/staticfiles/admin/js/: inlines.fb1617228dbe.js
api_todo/staticfiles/rest_framework/js/: coreapi-0.1.1.e580e3854595.js
api_todo/tests/: test_seed_database.py
apps/todos/: admin.py  factories.py  routes.py  test.py
apps/todos/management/commands/: seed_database.py
apps/todos/management/tests/: test_model_todo.py
apps/todos/migrations/: 0001_todos.py  max_migration.txt
